slide entre abas fix, slide entre fotos nos posts, design fix in come files, add camera and multiple fotos on CreatePostActivity.java e nos comentários

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        app:itemIconTint="@color/nav_item_selector"
-        app:itemTextColor="@color/nav_item_selector"
+        app:itemIconTint="@color/nav_item_colors"
+        app:itemTextColor="@color/nav_item_colors"
 
-        app:itemRippleColor="#206200EE"
+        app:itemRippleColor="@color/nav_item_selector"
         app:itemIconSize="26dp"
         app:labelVisibilityMode="labeled"
         app:elevation="16dp" />
