--- a/app/src/main/res/layout/activity_public_profile.xml
+++ b/app/src/main/res/layout/activity_public_profile.xml
@@ -143,7 +143,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="Seguidores"
-                                        android:textColor="?android:attr/textColorSecondary"
+                                        android:textColor="?android:attr/textColorPrimary"
                                         android:textSize="12sp"
                                         android:textAllCaps="true"/>
                                 </LinearLayout>
@@ -171,7 +171,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="A Seguir"
-                                        android:textColor="?android:attr/textColorSecondary"
+                                        android:textColor="?android:attr/textColorPrimary"
                                         android:textSize="12sp"
                                         android:textAllCaps="true"/>
                                 </LinearLayout>
