--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -50,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="12dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="0dp"
         app:cardBackgroundColor="?android:attr/colorBackground"
